Colaboratory를 통해 생성됨

--- a/Chapter_02_변수의_이해_및_기본_데이터_타입.ipynb
+++ b/Chapter_02_변수의_이해_및_기본_데이터_타입.ipynb
@@ -82,10 +82,36 @@
         "colab": {}
       },
       "source": [
-        ""
+        "a=10\n",
+        "b=11.4"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Gkb9o59_JQq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "20f4b808-60af-4788-8a1a-e5ab163424a2"
+      },
+      "source": [
+        "print(a,b)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 11.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -105,13 +131,25 @@
       "metadata": {
         "id": "S9yi09fu-TLt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "59a08fe7-8791-4d44-f6d9-7f90ae7898c6"
       },
       "source": [
-        ""
+        "print(a,10,100,b,sep='*',end='!!!')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10*10*100*11.4!!!"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
