Colaboratory를 통해 생성됨

--- a/Chapter_02_변수의_이해_및_기본_데이터_타입.ipynb
+++ b/Chapter_02_변수의_이해_및_기본_데이터_타입.ipynb
@@ -93,16 +93,16 @@
       "metadata": {
         "id": "6Gkb9o59_JQq",
         "colab_type": "code",
+        "outputId": "8fba7265-3e1d-4a46-f8e8-0efa44ac11e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "20f4b808-60af-4788-8a1a-e5ab163424a2"
+        }
       },
       "source": [
         "print(a,b)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,16 +131,16 @@
       "metadata": {
         "id": "S9yi09fu-TLt",
         "colab_type": "code",
+        "outputId": "ded3407b-27b2-4f90-ff18-0f6600fc5702",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "59a08fe7-8791-4d44-f6d9-7f90ae7898c6"
+        }
       },
       "source": [
         "print(a,10,100,b,sep='*',end='!!!')"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,13 +195,25 @@
       "metadata": {
         "id": "jMWw48Cl-TL3",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "02c55dc4-4530-436d-ff57-5b96d53ee06a"
       },
       "source": [
-        ""
+        "print(a,10,100,b,sep='*',end='!!!')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10*10*100*11.4!!!"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -221,13 +233,90 @@
       "metadata": {
         "id": "jYOhC_mH-TL8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "74db0c99-2bf8-400c-c6c4-73d1e0eb7c8c"
       },
       "source": [
-        ""
+        "print(a)\n",
+        "print(a,b)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "10 11.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rQYKTkfvBWri",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "8af69a88-86e6-4716-af5f-ac15cabe1c72"
+      },
+      "source": [
+        "a\n",
+        "b\n",
+        "#이 경우는 마지막 셀값만 반환"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11.4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QTsrNL7kBXLw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "88639b71-ff19-4606-dbc3-6c8da90d2f50"
+      },
+      "source": [
+        "# 다보고 싶으면\n",
+        "a,b"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 11.4)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,7 +341,10 @@
         "colab": {}
       },
       "source": [
-        ""
+        "abc=100\n",
+        "a_bc=100\n",
+        "_abc=100\n",
+        "ABCabc=100"
       ],
       "execution_count": 0,
       "outputs": []
@@ -273,13 +365,26 @@
       "metadata": {
         "id": "_ImwLScr-TMO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "outputId": "0461b36f-4f1c-4376-ecbb-c3d701435683"
       },
       "source": [
-        ""
+        "3abc=2"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-a93a137e8f4e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    3abc=2\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -339,10 +444,41 @@
         "colab": {}
       },
       "source": [
-        ""
+        "a=10\n",
+        "b=10.5"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9g9Nj17_DRBV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "652a20d9-9f7d-43d9-b8cb-8e6ff415d0a9"
+      },
+      "source": [
+        "type(b)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -362,13 +498,27 @@
       "metadata": {
         "id": "R7zuukPC-TM9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "1712dc5b-d268-4e9c-e8e9-b77720eedd4f"
       },
       "source": [
-        ""
+        "# 빈 변수를 생성하고 싶을 때 사용, 초기화 값을 모를때 사용하면 편리\n",
+        "c=None\n",
+        "print(c)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -391,13 +541,42 @@
       "metadata": {
         "id": "7vW6s6r1-TNH",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 148
+        },
+        "outputId": "ecdd5d14-6109-4e68-dc25-c07b4e317d22"
       },
       "source": [
-        ""
+        "a=4\n",
+        "b=5\n",
+        "\n",
+        "print(a>b) \n",
+        "print(a<b)\n",
+        "print(a>=b)\n",
+        "print(a==b)\n",
+        "print(a!=b)\n",
+        "\n",
+        "c=a>b\n",
+        "print(type(c))\n",
+        "print(c)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "<class 'bool'>\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -416,13 +595,36 @@
       "metadata": {
         "id": "6yFxBbPr-TNQ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "c97b1dab-1ed6-4ca1-b60a-1b3220ba8c4b"
       },
       "source": [
-        ""
+        "a=5\n",
+        "b=4\n",
+        "\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a%b)  #나머지 구하기\n",
+        "print(a/b)\n",
+        "print(a**b) # 승수 a의 b제곱"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "1\n",
+            "1\n",
+            "1.25\n",
+            "625\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -444,7 +646,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# ( )를 사용하여 결합법칙 적용"
       ],
       "execution_count": 0,
       "outputs": []
@@ -464,7 +666,11 @@
       "metadata": {
         "id": "yDJnq1iZ-TNk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "outputId": "ecfa0a51-1779-4fb3-90fb-01e825f8aaf0"
       },
       "source": [
         "a = 9\n",
@@ -472,8 +678,18 @@
         "print(a - 3)\n",
         "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "6\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -490,6 +706,142 @@
       "cell_type": "code",
       "metadata": {
         "id": "BtH_mK0V-TNv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "b8e3a523-7910-426f-e5c8-e103a7e8973d"
+      },
+      "source": [
+        "a=9\n",
+        "a-3\n",
+        "print(a)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WnTUQPrkGS5s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "0fb8dda7-4ab8-42fd-e4db-ddee8d1da008"
+      },
+      "source": [
+        "a=9\n",
+        "t=a-3\n",
+        "a=t\n",
+        "print(a)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9fj-zznNGTRO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "a95e2879-f8fa-4fd8-e619-9197858b865a"
+      },
+      "source": [
+        "a=9\n",
+        "a=a-3\n",
+        "print(a)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JAHW66-AGTlP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "bcc384bc-6b4d-4f6e-b5ff-0d058b713ad1"
+      },
+      "source": [
+        "a=10\n",
+        "# a=a-3\n",
+        "a-=3\n",
+        "print(a)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bO7tmMrZGRPK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ayL8aGsGRnr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4wKXmt1KGR-t",
         "colab_type": "code",
         "colab": {}
       },
