Colaboratory를 통해 생성됨

--- a/Chapter_02_변수의_이해_및_기본_데이터_타입.ipynb
+++ b/Chapter_02_변수의_이해_및_기본_데이터_타입.ipynb
@@ -102,7 +102,7 @@
       "source": [
         "print(a,b)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
       "source": [
         "print(a,10,100,b,sep='*',end='!!!')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,16 +195,16 @@
       "metadata": {
         "id": "jMWw48Cl-TL3",
         "colab_type": "code",
+        "outputId": "02c55dc4-4530-436d-ff57-5b96d53ee06a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "02c55dc4-4530-436d-ff57-5b96d53ee06a"
+        }
       },
       "source": [
         "print(a,10,100,b,sep='*',end='!!!')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,17 +233,17 @@
       "metadata": {
         "id": "jYOhC_mH-TL8",
         "colab_type": "code",
+        "outputId": "74db0c99-2bf8-400c-c6c4-73d1e0eb7c8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        },
-        "outputId": "74db0c99-2bf8-400c-c6c4-73d1e0eb7c8c"
+        }
       },
       "source": [
         "print(a)\n",
         "print(a,b)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,18 +260,18 @@
       "metadata": {
         "id": "rQYKTkfvBWri",
         "colab_type": "code",
+        "outputId": "8af69a88-86e6-4716-af5f-ac15cabe1c72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "8af69a88-86e6-4716-af5f-ac15cabe1c72"
+        }
       },
       "source": [
         "a\n",
         "b\n",
         "#이 경우는 마지막 셀값만 반환"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,17 +292,17 @@
       "metadata": {
         "id": "QTsrNL7kBXLw",
         "colab_type": "code",
+        "outputId": "88639b71-ff19-4606-dbc3-6c8da90d2f50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "88639b71-ff19-4606-dbc3-6c8da90d2f50"
+        }
       },
       "source": [
         "# 다보고 싶으면\n",
         "a,b"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,16 +365,16 @@
       "metadata": {
         "id": "_ImwLScr-TMO",
         "colab_type": "code",
+        "outputId": "0461b36f-4f1c-4376-ecbb-c3d701435683",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "0461b36f-4f1c-4376-ecbb-c3d701435683"
+        }
       },
       "source": [
         "3abc=2"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -455,16 +455,16 @@
       "metadata": {
         "id": "9g9Nj17_DRBV",
         "colab_type": "code",
+        "outputId": "652a20d9-9f7d-43d9-b8cb-8e6ff415d0a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "652a20d9-9f7d-43d9-b8cb-8e6ff415d0a9"
+        }
       },
       "source": [
         "type(b)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,18 +498,18 @@
       "metadata": {
         "id": "R7zuukPC-TM9",
         "colab_type": "code",
+        "outputId": "1712dc5b-d268-4e9c-e8e9-b77720eedd4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "1712dc5b-d268-4e9c-e8e9-b77720eedd4f"
+        }
       },
       "source": [
         "# 빈 변수를 생성하고 싶을 때 사용, 초기화 값을 모를때 사용하면 편리\n",
         "c=None\n",
         "print(c)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,11 +541,11 @@
       "metadata": {
         "id": "7vW6s6r1-TNH",
         "colab_type": "code",
+        "outputId": "ecdd5d14-6109-4e68-dc25-c07b4e317d22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 148
-        },
-        "outputId": "ecdd5d14-6109-4e68-dc25-c07b4e317d22"
+        }
       },
       "source": [
         "a=4\n",
@@ -561,7 +561,7 @@
         "print(type(c))\n",
         "print(c)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,11 +595,11 @@
       "metadata": {
         "id": "6yFxBbPr-TNQ",
         "colab_type": "code",
+        "outputId": "c97b1dab-1ed6-4ca1-b60a-1b3220ba8c4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        },
-        "outputId": "c97b1dab-1ed6-4ca1-b60a-1b3220ba8c4b"
+        }
       },
       "source": [
         "a=5\n",
@@ -611,7 +611,7 @@
         "print(a/b)\n",
         "print(a**b) # 승수 a의 b제곱"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,11 +666,11 @@
       "metadata": {
         "id": "yDJnq1iZ-TNk",
         "colab_type": "code",
+        "outputId": "b644dca0-88ca-46c2-c164-91b836886ddc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        },
-        "outputId": "ecfa0a51-1779-4fb3-90fb-01e825f8aaf0"
+        }
       },
       "source": [
         "a = 9\n",
@@ -678,7 +678,7 @@
         "print(a - 3)\n",
         "print(a)"
       ],
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,18 +707,18 @@
       "metadata": {
         "id": "BtH_mK0V-TNv",
         "colab_type": "code",
+        "outputId": "41353951-ae3a-4eb4-83dd-1ac14333352e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "b8e3a523-7910-426f-e5c8-e103a7e8973d"
+        }
       },
       "source": [
         "a=9\n",
         "a-3\n",
         "print(a)"
       ],
-      "execution_count": 25,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,11 +734,11 @@
       "metadata": {
         "id": "WnTUQPrkGS5s",
         "colab_type": "code",
+        "outputId": "5145e4fe-39df-4c8c-f356-37c35dada2f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "0fb8dda7-4ab8-42fd-e4db-ddee8d1da008"
+        }
       },
       "source": [
         "a=9\n",
@@ -746,7 +746,7 @@
         "a=t\n",
         "print(a)"
       ],
-      "execution_count": 27,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,18 +762,18 @@
       "metadata": {
         "id": "9fj-zznNGTRO",
         "colab_type": "code",
+        "outputId": "a95e2879-f8fa-4fd8-e619-9197858b865a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "a95e2879-f8fa-4fd8-e619-9197858b865a"
+        }
       },
       "source": [
         "a=9\n",
         "a=a-3\n",
         "print(a)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,11 +789,11 @@
       "metadata": {
         "id": "JAHW66-AGTlP",
         "colab_type": "code",
+        "outputId": "bcc384bc-6b4d-4f6e-b5ff-0d058b713ad1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "bcc384bc-6b4d-4f6e-b5ff-0d058b713ad1"
+        }
       },
       "source": [
         "a=10\n",
@@ -801,7 +801,7 @@
         "a-=3\n",
         "print(a)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,7 +820,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# 문자열에 대한 강의"
       ],
       "execution_count": 0,
       "outputs": []
@@ -830,10 +830,82 @@
       "metadata": {
         "id": "5ayL8aGsGRnr",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "outputId": "c05bffbf-6242-48ec-f12a-31ed2fce7777"
+      },
+      "source": [
+        "# '' \"\" 한줄 문자열\n",
+        "# ''' ''' 여러줄에 걸쳐서 문자열 표현가능\n",
+        "a='\"hello\" python'\n",
+        "b=\"hello python\"\n",
+        "c=\"hello python. It's wonderful thing\"\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"hello\" python\n",
+            "hello python\n",
+            "hello python. It's wonderful thing\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4wKXmt1KGR-t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "5c87fc93-11fb-4e0e-8040-fce3484bd9f4"
+      },
+      "source": [
+        "c='''hello\n",
+        "\n",
+        "python'''\n",
+        "d=\"\"\"hello \n",
+        "python\"\"\"\n",
+        "\n",
+        "print(c)\n",
+        "print(d)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello\n",
+            "\n",
+            "python\n",
+            "hello \n",
+            "python\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "431FamJ3Ktuz",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# escape string \n",
+        "# \\n : 새로운 줄형성(엔터키와 동일한 기능)\n",
+        "# \\t : tab 기능"
       ],
       "execution_count": 0,
       "outputs": []
@@ -841,7 +913,315 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4wKXmt1KGR-t",
+        "id": "q22OzGqSKulQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 92
+        },
+        "outputId": "fd9493bb-5dbe-4eaf-cd5d-91101c8090f4"
+      },
+      "source": [
+        "print('hello python\\n\\n')\n",
+        "print('ha\\thaha')"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello python\n",
+            "\n",
+            "\n",
+            "ha\thaha\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-i0AIzA3M3Ys",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# indexing and slicing "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wFbuED7rM4k-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "ef3ebd59-a5f9-47b3-a77d-9c2616d893af"
+      },
+      "source": [
+        "a='hello world'\n",
+        "print(a[0])"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "h\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GbT_rNtmM5Bg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "0c8edd0d-4a57-478f-9f21-a74d32ac9321"
+      },
+      "source": [
+        "print(a[0])\n",
+        "print(a[10])\n",
+        "\n",
+        "print(a[-1])\n",
+        "print(a[-11])\n",
+        "\n",
+        "print(a[0:11]) # 범위를 줄 때 처음의 값은 포함하고 마지막 값은 포함하지 않는다. 0~10의 의미이다. "
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "h\n",
+            "d\n",
+            "d\n",
+            "h\n",
+            "hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jNJhxZqWM5dS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "outputId": "06551898-014c-4265-ea31-a324eccf34e9"
+      },
+      "source": [
+        "print(a[0:1],a[0:5])\n",
+        "print(a[:11])\n",
+        "print(a[3:])"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "h hello\n",
+            "hello world\n",
+            "lo world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KlmhzMfPKu6C",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 문자열 함수"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q1d07tqlKv7C",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "182db413-f3b2-41b7-a27a-4cb99a177134"
+      },
+      "source": [
+        "a='hello world'\n",
+        "a.upper()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'HELLO WORLD'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NC7rZR6fKwUj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "5b19e179-2675-49b5-d116-d74b703399b3"
+      },
+      "source": [
+        "a.replace('h','j')"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'jello world'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y0lZJ7QRKwtV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "bd6712fd-58fe-44b2-8265-6e7808f11d52"
+      },
+      "source": [
+        "# format 함수\n",
+        "\n",
+        "temperature=25.5\n",
+        "probability=80.0\n",
+        "\n",
+        "a='오늘 기온은 {}도 이고, 비올 확률은 {}%입니다.'\n",
+        "b=a.format(temperature, probability)\n",
+        "print(b)\n",
+        "\n",
+        "a='오늘 기온은 {}도 이고, 비올 확률은 {}%입니다.'.format(temperature, probability)\n",
+        "print(a)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "오늘 기온은 25.5도 이고, 비올 확률은 80.0%입니다.\n",
+            "오늘 기온은 25.5도 이고, 비올 확률은 80.0%입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pz9RxpkBKxGZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "2c5dc2db-e148-4645-9234-6e121fa84114"
+      },
+      "source": [
+        "# split 함수\n",
+        "\n",
+        "a='hello world what a nice weather'\n",
+        "b=a.split('w')\n",
+        "b"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hello ', 'orld ', 'hat a nice ', 'eather']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PlR9W881Kxca",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "228cda7e-ac2d-4401-966c-924c5edf83bc"
+      },
+      "source": [
+        "a='hello world what a nice weather'\n",
+        "c=a.split(' ')\n",
+        "c"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hello', 'world', 'what', 'a', 'nice', 'weather']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sZuS5d-nKx1C",
         "colab_type": "code",
         "colab": {}
       },
